Set min-width to 360px to prevent overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 
 body {
     display: block;
+    min-width: 360px;
     background: #dd6123;
     background: -moz-linear-gradient(left, #dd6123 0%, #dd4900 100%);
     background: -webkit-gradient(linear, left top, right top, color-stop(0%, #dd6123), color-stop(100%, #dd4900));
